# work

./: README.md  git-cmd  readme
IPC/: .~lock.swdd_ip3x_software detailed design IPC.docx#  exports  ipc_object.cpp  messagedefine.xlsx  swdd_ip3x_software detailed design IPC.docx
IPC/ipc_code_for_test/: ipc.c  ipc.h  makefile  receiver  receiver.c  sender  sender.c
POC项目部署/: readme
coredump/: coredump_testcase.c  coredump设置.odt  makefile  readme  testcase
emergency_dashboard/: edb_demo  emergency_dashboard.c
emergency_dashboard/20170710/: emergency_dashboard.c.bak
env_monitor/: Makefile  env_api.c  env_api.h  env_main  env_main.c
gtest/doc/: gtest-gcovr构建说明.docx
gtest/gtest_gmock_training/: 03_UT_Training_Agenda_2017-08-29.mm  07_gtest_gmock_Study_Blog.docx
gtest/gtest_gmock_training/hello_gmock/: .CMakeLists.txt.swp  CMakeLists.txt  HelloGmock.cpp  HelloWorld.h  Messenger.h  build.sh  hello_gmock
gtest/gtest_gmock_training/hello_gtest/: CMakeLists.txt  GreatestCommonDivisor.cpp  GreatestCommonDivisor.h  Hello_gtest.cpp  Hello_gtest.h
lvds_optimize/: Makefile  README.md  common.h  convert.c  convert.h  lvds_capture.c  lvds_capture.h  main.c  question-list.txt  tags  util.c  util.h  wayland_egl.c  wayland_egl.h
make-test/: Makefile  Makefile-bak  hello.c  hello.h
makefile-test/: Makefile  main.c
makefile-test/mk/: Makefile
packv0.8/: install.sh  readme
packv0.8/app/: SaicCluster.kzb.cfg  SaicCluster.kzb.txt  readme
pool-test/: a.out  list.h  pool_template.h  readme  tags  test.c
popup-test/: a.out  popup.c
requirement_analysis/: 20170330-cf1-IP34AS24AS26 12.3 IPK Part 3_V1.8.6.docx  part3-tripcomputer-requirement-analysis.xlsx
syslog-mgr/: demo_log  main.c  makefile  sender.c  tags
timer/: HMI_RELEASE_TRACK_20160913_V0.5.xlsx  Makefile  Message_Def.h  a.out  kanzi PopUp Message.xlsx  list.h  list.h.gch  main.c  popup  popup.c  popup_test  timer.c  timer.h
u-boot/: readme
uart_protocol/: UART_protocol_V1.4.xlsx  uart_data.txt
usb-monitor/: base.h  makefile  monitor_usb  usb.c
usb-update/: USB升级版本模块测试报告.xlsx  cmd
(+231 files in other folders)
